# modulo_2

./: ejercicio_1.py  ejercicio_10.py  ejercicio_11.py  ejercicio_12.py  ejercicio_13.py  ejercicio_14.py  ejercicio_15.py  ejercicio_2.py  ejercicio_3.py  ejercicio_4.py  ejercicio_5.py  ejercicio_6.py  ejercicio_7.py  ejercicio_8.py  ejercicio_9.py  main.py  pyproject.toml
test/: test_ejercicio1.py  test_ejercicio10.py  test_ejercicio11.py  test_ejercicio12.py  test_ejercicio13.py  test_ejercicio14.py  test_ejercicio15.py  test_ejercicio2.py  test_ejercicio3.py  test_ejercicio4.py  test_ejercicio5.py  test_ejercicio6.py  test_ejercicio7.py  test_ejercicio8.py  test_ejercicio9.py  test_ejericicio1.py
