[project]
name = "python-project-1"
version = "0.1.0"
description = "My Python project with Pytest"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pytest"
]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-v"
norecursedirs = [
    ".git",
    "venv",
".venv"
]